Comments ADDED.
TODO CHECK all (libc) functions for segf && optimizations.