@@ -6,7 +6,7 @@
 /*   By: lfabbro <marvin@42.fr>                     +#+  +:+       +#+        */
 /*                                                +#+#+#+#+#+   +#+           */
 /*   Created: 2015/11/25 16:44:50 by lfabbro           #+#    #+#             */
-/*   Updated: 2015/11/30 12:58:50 by lfabbro          ###   ########.fr       */
+/*   Updated: 2016/11/17 22:15:13 by lfabbro          ###   ########.fr       */
 /*                                                                            */
 /* ************************************************************************** */
 
@@ -15,13 +15,16 @@ char	*ft_strrchr(const char *s, int c)
 	int		i;
 
 	i = 0;
-	while (s[i])
-		i++;
-	while (i + 1)
+	if (s)
 	{
-		if (s[i] == ((char)c))
-			return (&(((char *)s)[i]));
-		i--;
+		while (s[i])
+			++i;
+		while (i + 1)
+		{
+			if (s[i] == ((char)c))
+				return (&(((char *)s)[i]));
+			--i;
+		}
 	}
 	return (0);
 }
