@@ -1,36 +1,37 @@
 /* ************************************************************************** */
 /*                                                                            */
 /*                                                        :::      ::::::::   */
-/*   get_next_line.h                                    :+:      :+:    :+:   */
+/*   ft_strxchr.c                                       :+:      :+:    :+:   */
 /*                                                    +:+ +:+         +:+     */
 /*   By: lfabbro <lfabbro@student.42.fr>            +#+  +:+       +#+        */
 /*                                                +#+#+#+#+#+   +#+           */
-/*   Created: 2016/01/18 13:54:04 by lfabbro           #+#    #+#             */
-/*   Updated: 2016/04/04 13:19:57 by lfabbro          ###   ########.fr       */
+/*   Created: 2016/11/17 21:50:23 by lfabbro           #+#    #+#             */
+/*   Updated: 2016/11/17 22:08:54 by lfabbro          ###   ########.fr       */
 /*                                                                            */
 /* ************************************************************************** */
 
-#ifndef GET_NEXT_LINE_H
-# define GET_NEXT_LINE_H
+#include "libft.h"
 
-# include <stdlib.h>
-# include <unistd.h>
-# include "./libft.h"
+/*
+**	Description:
+**		this function returns the address of the x-th char in a string
+*/
 
-# define BUFF_SIZE 10000
-# define MAX_FD 2560
-# define I_SIZE 2
-
-typedef struct		s_save
+char		*ft_strxchr(const char *s, char c, int x)
 {
-	char			*buf;
-	char			*ptr;
-	long			buf_size;
-	long			buf_len;
-	long			line_len;
-	int				ret;
-}					t_save;
-
-int					get_next_line(int const fd, char **line);
-
-#endif
+	if (s)
+	{
+		while (*s && x)
+		{
+			if (*s == (char)c)
+				--x;
+			if (!x)
+				return ((char*)s);
+			++s;
+		}
+		if (c == '\0')
+			return ((char*)s);
+		return (NULL);
+	}
+	return (NULL);
+}
